--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FindAFriend</string>
+    <string name="app_name">WhereAreYou</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -21,4 +21,10 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_current_group">Map</string>
+    <string name="what_address">What is the address?</string>
+    <string name="group_name">Group Name</string>
+    <string name="email">Email ID</string>
+
+
 </resources>
